# cookiecutter-pypackage

./: .pre-commit-config.yaml  cookiecutter.json  mypy.ini  pyproject.toml
{{cookiecutter.project_slug}}/: pyproject.toml
