[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.md"
packages = [{ include = "{{ cookiecutter.project_slug }}", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.8.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.3.1"
pre-commit = "^3.3.3"

[tool.mypy]
strict = true
show_error_codes = true
show_column_numbers = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--cov={{ cookiecutter.project_slug }}"
]
xfail_strict = true

[tool.coverage.run]
branch = true

[tool.commitizen]
version_provider = "poetry"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
